<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/show_exercise_root">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#000000" />

    <TextView
        android:text="@string/show_exercise_exercise"
        style="@style/TextView40sp"/>

    <TextView
        android:text="@string/show_exercise_name"
        style="@style/TextView30sp"/>
    <TextView
        android:id="@+id/show_exercise_tv_name"
        android:text="asdfsadf"
        style="@style/TextView20spWithLeftPadding"/>

    <TextView
        android:text="@string/show_exercise_description"
        style="@style/TextView30sp"/>
    <TextView
        android:id="@+id/show_exercise_tv_description"
        android:text="asdfasdf"
        style="@style/TextView20spWithLeftPadding" />

    <TextView
        android:text="@string/show_exercise_image"
        style="@style/TextView30sp"/>
    <ImageView
        android:id="@+id/show_exercise_tv_icon"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/show_exercise_imageview_contentdescription" />

</LinearLayout>